Fix todo container align

--- a/components/todo/App.module.scss
+++ b/components/todo/App.module.scss
@@ -2,12 +2,13 @@
   display: flex;
   flex-direction: column;
   max-width: 500px;
+  width: calc(100% - 10px);
   margin: 5px auto;
   border: 1px solid lightgray;
   font-size: 14px;
   background: #ffffff;
   border-radius: 5px;
-  margin: 5px;
+  margin: 5px auto;
 
   &__instruction {
     position: fixed;
